Fixes bug