@@ -4,6 +4,7 @@ MAINTAINER Carlos Ballesteros Velasco <soywiz@gmail.com>
 
 ENV DEBIAN_FRONTEND=noninteractive
 RUN dpkg --add-architecture i386 && apt-get update && apt-get install -y openjdk-11-jdk unzip wget curl nano libtinfo-dev libtinfo5 wine wine32 wine64
+RUN apt-get install zip
 
 ENV USER_HOME_LINUX=/home/user
 ENV WINEPREFIX=$USER_HOME_LINUX/.wine
@@ -17,13 +18,26 @@ RUN	wine wineboot --init && wineserver -w && sleep 5
 
 ENV USER_HOME_WINE=$USER_HOME_LINUX/.wine/drive_c/users/user
 
+#RUN mkdir -p $USER_HOME_LINUX/.wine/drive_c/dev/ && \
+#	cd $USER_HOME_LINUX/.wine/drive_c/dev/ && \
+#	wget --quiet https://github.com/ojdkbuild/ojdkbuild/releases/download/11.0.1-1/java-11-openjdk-11.0.1.13-1.ojdkbuild.windows.x86_64.zip && \
+#	unzip java-11-openjdk-11.0.1.13-1.ojdkbuild.windows.x86_64.zip && \
+#	rm -f java-11-openjdk-11.0.1.13-1.ojdkbuild.windows.x86_64.zip && \
+#	mv java-11-openjdk-11.0.1.13-1.ojdkbuild.windows.x86_64 java && \
+#	rm java/lib/src.zip
+
 RUN mkdir -p $USER_HOME_LINUX/.wine/drive_c/dev/ && \
 	cd $USER_HOME_LINUX/.wine/drive_c/dev/ && \
-	wget --quiet https://github.com/ojdkbuild/ojdkbuild/releases/download/11.0.1-1/java-11-openjdk-11.0.1.13-1.ojdkbuild.windows.x86_64.zip && \
-	unzip java-11-openjdk-11.0.1.13-1.ojdkbuild.windows.x86_64.zip && \
-	rm -f java-11-openjdk-11.0.1.13-1.ojdkbuild.windows.x86_64.zip && \
-	mv java-11-openjdk-11.0.1.13-1.ojdkbuild.windows.x86_64 java && \
-	rm java/lib/src.zip
+	wget --quiet https://github.com/ojdkbuild/ojdkbuild/releases/download/1.8.0.191-1/java-1.8.0-openjdk-1.8.0.191-1.b12.ojdkbuild.windows.x86_64.zip && \
+	unzip java-1.8.0-openjdk-1.8.0.191-1.b12.ojdkbuild.windows.x86_64.zip && \
+	rm -f java-1.8.0-openjdk-1.8.0.191-1.b12.ojdkbuild.windows.x86_64.zip && \
+	mv java-1.8.0-openjdk-1.8.0.191-1.b12.ojdkbuild.windows.x86_64 java && \
+	rm java/src.zip
+
+# Patches Files to circumvent the bug
+ADD java/nio/file/Files.class $JAVA_HOME_WIN/jre/lib/java/nio/file/Files.class
+RUN cd $JAVA_HOME_WIN/jre/lib && jar uf rt.jar java/nio/file/Files.class
+
 
 #RUN mkdir -p $USER_HOME/.wine/drive_c/dev/ && \
 #	cd $USER_HOME/.wine/drive_c/dev/ && \
@@ -47,7 +61,7 @@ RUN cd /usr/local/bin && \
 	echo "#!/bin/bash\nwine cmd /c \$*" > winecmd && \
 	chmod +x gradle-win winecmd
 
-# Create .gradle, .konan and .m2, and instructions to not use the gradle daemon
+# Create .gradle, .konan and .m2
 RUN cd $USER_HOME_LINUX && \
 	mkdir -p $USER_HOME_WINE/.gradle && \
 	mkdir -p $USER_HOME_WINE/.konan && \
@@ -70,3 +84,32 @@ VOLUME ["$USER_HOME_LINUX/.m2"]
 VOLUME ["/work"]
 
 WORKDIR /work
+
+ENV JAVA_HOME_WIN=$USER_HOME_LINUX/.wine/drive_c/dev/java
+
+#RUN rm $JAVA_HOME_WIN/jre/lib/rt.jar
+
+#ADD sun/nio/zipfs/ZipFileSystem.class $JAVA_HOME_WIN/jre/lib/ext/sun/nio/zipfs/ZipFileSystem.class
+#RUN cd $JAVA_HOME_WIN/jre/lib/ext && jar uf zipfs.jar sun/nio/zipfs/ZipFileSystem.class
+
+#RUN wine java -Xshare:dump && wineserver -w && sleep 5
+
+#RUN find $USER_HOME_LINUX/.wine/drive_c/dev/java && echo 1
+
+#RUN jmod extract $JAVA_HOME_WIN/jmods/java.base.jmod --dir $JAVA_HOME_WIN/jmods
+#RUN jmod extract $JAVA_HOME_WIN/jmods/jdk.unsupported.jmod --dir $JAVA_HOME_WIN/jmods
+#ADD sun/nio/fs/WindowsFileSystemProvider.class $JAVA_HOME_WIN/jmods/classes/sun/nio/fs/WindowsFileSystemProvider.class
+#RUN ls -la $JAVA_HOME_WIN/jmods/java.base/classes/sun/nio/fs
+#RUN cd $JAVA_HOME_WIN/jmods/java.base && zip -r ../java.base.zip *
+#RUN rm -rf $JAVA_HOME_WIN/jmods/java.base
+#ADD JMOD_HEADER $JAVA_HOME_WIN/jmods/JMOD_HEADER
+#RUN cd $JAVA_HOME_WIN/jmods && cat JMOD_HEADER java.base.zip > java.base.jmod
+#RUN rm $JAVA_HOME_WIN/jmods/java.base.jmod
+#RUN cd $JAVA_HOME_WIN && wine jlink --module-path jmods/java.base --add-modules java.base,jdk.unsupported --output new_jre
+#RUN cp -rf $JAVA_HOME_WIN/new_jre/lib/* $JAVA_HOME_WIN/lib/
+
+
+#RUN winecmd java -version
+
+#RUN cd $USER_HOME_LINUX/.wine/drive_c/dev/java/jre/lib && zip -ur rt.jar sun
+
